Fix for  Bug 309869 -  Time Zone does not marshal correctly for DST
Now when applying a time zone the source date is used to factor in daylight savings time (if any).